--- a/frontend/index.html
+++ b/frontend/index.html
@@ -281,6 +281,7 @@
     </div>
   </div>
 
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.7.7/axios.min.js"></script>
   <script src="js/script.js"></script>
 </body>
 
